fix _uri : fix the format of the uris